deploy-kubernetes/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.service: webserver
    spec:
      containers:
        - env:
            - name: DOLI_ADMIN_LOGIN
              valueFrom:
                secretKeyRef:
                  key: DOLI_ADMIN_LOGIN
                  name: secret-dolibarr
            - name: DOLI_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: DOLI_ADMIN_PASSWORD
                  name: secret-dolibarr
            - name: DOLI_DB_HOST
              value: db
            - name: DOLI_DB_NAME
              valueFrom:
                secretKeyRef:
                  key: MYSQL_DATABASE
                  name: secret-mysql
            - name: DOLI_DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MYSQL_ROOT_PASSWORD
                  name: secret-mysql
            - name: DOLI_DB_USER
              value: root
            - name: DOLI_URL_ROOT
              value: http://0.0.0.0
            - name: PHP_INI_DATE_TIMEZONE
              valueFrom:
                configMapKeyRef:
                  key: TZ
                  name: env-tz
          image: tuxgasy/dolibarr:16.0.4
          name: webserver
          ports:
            - containerPort: 80
              name: dolibarr
          resources: {}
          volumeMounts:
            - mountPath: /var/www/documents
              name: dolibarr-documents-data
            - mountPath: /var/www/html/custom
              name: dolibarr-custom-data
      restartPolicy: Always
      volumes:
        - name: dolibarr-documents-data
          persistentVolumeClaim:
            claimName: dolibarr-documents-data
        - name: dolibarr-custom-data
          persistentVolumeClaim:
            claimName: dolibarr-custom-data
status: {}
