deploy-kubernetes/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  ports:
    - port: 80
      targetPort: dolibarr
  selector:
    io.kompose.service: webserver
status:
  loadBalancer: {}
