deploy-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolibarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/limit-rps: '20'
spec:
  tls:
    - hosts:
        # TODO replace with your subdomain
        - bills.mydomain.com
      secretName: dolibarr-ingress-tls
  rules:
    # TODO replace with your subdomain
    - host: bills.mydomain.com
      http:
        paths:
          - backend:
              service:
                name: webserver
                port:
                  number: 80
            path: /
            pathType: Prefix
