deploy-kubernetes/allow-internet-networkpolicy.yaml
# Source: https://cloud.redhat.com/blog/guide-to-kubernetes-ingress-network-policies

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-access: "true"
  policyTypes:
    - Ingress
  ingress:
    - {}
