deploy-kubernetes/allow-same-namespace-networkpolicy.yaml
# Source: https://cloud.redhat.com/blog/guide-to-kubernetes-ingress-network-policies

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
