deploy-kubernetes/default-deny-all-networkpolicy.yaml
# Source: https://cloud.redhat.com/blog/guide-to-kubernetes-ingress-network-policies

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
