deploy-kubernetes/net-allow-internet-networkpolicy.yaml
# Source: https://cloud.redhat.com/blog/guide-to-kubernetes-ingress-network-policies

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-access: "true"
  policyTypes:
    - Ingress
  ingress:
    - {}
---
# Allow internet access for ACME Pods.
# Without internet access the generation of certificates is not possible.
# Source: https://github.com/cert-manager/cert-manager/issues/2334#issuecomment-579000757
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-acme
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - {}
